fix: letter spacing

--- a/src/instruments/src/EFB/Assets/Boot.scss
+++ b/src/instruments/src/EFB/Assets/Boot.scss
@@ -20,6 +20,7 @@
 
 * {
   font-family: 'Nunito Sans', sans-serif;
+  letter-spacing: .35px;
 }
 
 @tailwind base;
